syntax = "proto3";

package messenger;

import "google/protobuf/empty.proto";

option java_package = "se.umu.cs.ads.a1.grpc";
option java_outer_classname = "MessengerProto";

message Message {
    string id = 1;
    int64 timestamp = 2;
    string username = 3;
    string topic = 4;
    string content = 5;
    bytes data = 6;
}

message MessageId {
    string id = 1;
}

message Username {
    string value = 1;
}

message Topic {
    string value = 1;
}

message StoreRequest {
    repeated Message messages = 1;
}

message RetrieveRequest {
    repeated MessageId ids = 1;
}

message RetrieveResponse {
    repeated Message messages = 1;
}

message DeleteRequest {
    repeated MessageId ids = 1;
}

message SubscriptionRequest {
    Username username = 1;
    Topic topic = 2;
}

message TopicList {
    repeated Topic topics = 1;
}

message UsernameList {
    repeated Username users = 1;
}

message MessageIdList {
    repeated MessageId ids = 1;
}

service MessengerService {
    rpc Store (StoreRequest) returns (google.protobuf.Empty);
    rpc Retrieve (RetrieveRequest) returns (RetrieveResponse);
    rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
    rpc Subscribe (SubscriptionRequest) returns (TopicList);
    rpc Unsubscribe (SubscriptionRequest) returns (TopicList);
    rpc ListUsers (google.protobuf.Empty) returns (UsernameList);
    rpc ListTopics (google.protobuf.Empty) returns (TopicList);
    rpc ListUserTopics (Username) returns (TopicList);
    rpc ListSubscribers (Topic) returns (UsernameList);
    rpc ListUserMessages (Username) returns (MessageIdList);
    rpc ListTopicMessages (Topic) returns (MessageIdList);
}